Fix positioning of search on mobile

--- a/src/sass/components/search.scss
+++ b/src/sass/components/search.scss
@@ -1,5 +1,5 @@
 .search {
-  grid-area: 2 / 1 / span 1 / span 2;
+  grid-area: content;
   align-self: start;
   justify-self: center;
 
